Fix tags hover contrast in light mode by using important modifiers and updating compatibility rule

--- a/resources/css/components/theme-compatibility.css
+++ b/resources/css/components/theme-compatibility.css
@@ -30,7 +30,7 @@
   border-color: theme('colors.gray.200') !important;
 }
 
-:root:not(.dark) .bg-gray-50 {
+:root:not(.dark) .bg-gray-50:not(:hover) {
   background-color: theme('colors.gray.100') !important;
 }
 
@@ -59,7 +59,7 @@
   filter: brightness(1.05) contrast(1.05);
 }
 
-:root:not(.dark) .dark\\:bg-gray-800 {
+:root:not(.dark) .dark\:bg-gray-800:not(:hover) {
   background-color: theme('colors.gray.100') !important;
 }
 
